[gd_scene load_steps=9 format=3 uid="uid://bqm8x7y2n3k4l"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_menu"]

[sub_resource type="LabelSettings" id="LabelSettings_title"]
font_size = 64
outline_size = 3
outline_color = Color(0.2, 0.6, 0.3, 1)

[sub_resource type="LabelSettings" id="LabelSettings_subtitle"]
font_size = 20
font_color = Color(0.8, 0.9, 0.8, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_play_hover"]
bg_color = Color(0.25, 0.8, 0.35, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0, 0, 0, 0.5)
shadow_size = 12
shadow_offset = Vector2(0, 6)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_play_pressed"]
bg_color = Color(0.15, 0.6, 0.25, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0, 0, 0, 0.3)
shadow_size = 4
shadow_offset = Vector2(0, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_play_normal"]
bg_color = Color(0.2, 0.7, 0.3, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0, 0, 0, 0.4)
shadow_size = 8
shadow_offset = Vector2(0, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_quit_hover"]
bg_color = Color(0.7, 0.35, 0.25, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0, 0, 0, 0.4)
shadow_size = 6
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_quit_normal"]
bg_color = Color(0.6, 0.3, 0.2, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0, 0, 0, 0.3)
shadow_size = 4
shadow_offset = Vector2(0, 2)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_menu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.2, 0.1, 1)

[node name="GradientOverlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.4, 0.2, 0.3)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "GOLF LOOP"
label_settings = SubResource("LabelSettings_title")
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Master the Perfect Swing"
label_settings = SubResource("LabelSettings_subtitle")
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="PlayButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_styles/hover = SubResource("StyleBoxFlat_play_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_play_pressed")
theme_override_styles/normal = SubResource("StyleBoxFlat_play_normal")
text = "⛳ PLAY ⛳"

[node name="Spacer2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="QuitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_styles/hover = SubResource("StyleBoxFlat_quit_hover")
theme_override_styles/normal = SubResource("StyleBoxFlat_quit_normal")
text = "QUIT"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "title_pulse"

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
